# ai-project-template

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/app/: logging_config.py  main.py
tests/: test_logging_config.py  test_main_smoke.py
