[tool.poetry]
name = "ai-project-template"
version = "0.1.0"
description = "Production-ready baseline template for AI-focused Python services."
authors = ["Damir Perkosan <dperkosan@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
ruff = "^0.13.2"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "B",
  "C4",
  "E",
  "F",
  "I",
  "SIM",
  "UP",
  "W",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true
pretty = true
show_error_codes = true
warn_unreachable = true
mypy_path = ["src"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --maxfail=1 -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
